<resources>
    <string name="app_name">HärtCheck</string>
    <string name="fill">Text</string>
    <string name="filler"> </string>
    <string name="btn_login">Login</string>
    <string name="btn_send">Send</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_register">Register</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_next">Next</string>
    <string name="btn_info">Learn more about BP Management</string>
    <string name="btn_code">Send Code</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_back_log">Back to Login</string>
    <string name="btn_back_home">Back to Home</string>
    <string name="btn_edit">Edit Profile</string>
    <string name="btn_save">Save Changes</string>
    <string name="btn_delete">Delete Account</string>
    <string name="btn_report">Report Problem</string>
    <string name="btn_add_bp">Add BP</string>
    <string name="btn_view_bp">View Previous BP</string>
    <string name="btn_sync">Sync Smartwatch</string>
    <string name="btn_add">Add</string>
    <string name="btn_appointment_hist">Appointment History</string>
    <string name="btn_view_doc">View Available Doctors</string>
    <string name="btn_request">Request to Reschedule</string>
    <string name="btn_cancel_app">Cancel Appointment</string>
    <string name="btn_book_app">Book Appointment</string>
    <string name="btn_request_date">Request this date</string>
    <string name="btn_view_app">View Appointment</string>
    <string name="btn_okay">Ok</string>
    <string name="btn_exit">Close</string>
    <string name="btn_payment">Send Payment Link</string>
    <string name="btn_resched">Reschedule Appointment</string>
    <string name="btn_change_pass">Change Password</string>
    <string name="btn_addMore">Add more?</string>
    <string name="btn_Remove">Remove?</string>
    <string name="btn_Remove_prev">Remove Previous?</string>
    <string name="btn_view_bp_2">View my BP</string>
    <string name="btn_consultations">Consultations</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_profile">Profile</string>
    <string name="header_reg_1">Hello! Register to get started</string>
    <string name="header_reg_4">Please input your height and weight.</string>
    <string name="header_past_appointments">Appointment History</string>
    <string name="header_reg_2">Please answer the following questions.</string>
    <string name="header_reg_3">You’re almost there!</string>
    <string name="header_appoint_hist">Consultation Details</string>
    <string name="header_login">Welcome back! Glad to see you, Again!</string>
    <string name="header_terms">Terms and Conditions</string>
    <string name="header_forgot">Forgot Password?</string>
    <string name="header_otp">OTP Verification</string>
    <string name="header_new_pass">Create new password</string>
    <string name="header_change_pass">Change password</string>
    <string name="header_pass_change">Password Changed!</string>
    <string name="header_acc_verify">Account Verified!</string>
    <string name="header_faq">Frequently Asked Questions (FAQ)</string>
    <string name="header_home">Hello [User] What would you like to do?</string>
    <string name="header_educ">About High Blood Pressure</string>
    <string name="header_profile_1">Profile</string>
    <string name="header_profile_2">Edit Profile</string>
    <string name="header_bug_1">Bug Report</string>
    <string name="header_bug_reported">Bug has been reported!</string>
    <string name="header_bug_resolved">Bug has been resolved!</string>
    <string name="header_chat_empty">Chat is currently empty</string>
    <string name="header_prev_bp">Previous BP</string>
    <string name="header_purchase_success">Purchase Success</string>
    <string name="header_appointments">Appointments</string>
    <string name="header_appointment_details">Appointment Details</string>
    <string name="header_available_doctor">Available Doctors</string>
    <string name="header_doctor_details">Doctor Details</string>
    <string name="header_resched">Your appointment has been rescheduled</string>
    <string name="header_request_sent">Booking Request Sent!</string>
    <string name="input_fn">First Name</string>
    <string name="input_ln">Last Name</string>
    <string name="input_birthday">Birthday</string>
    <string name="input_gender">Gender</string>
    <string name="input_height">Height</string>
    <string name="input_weight">Weight</string>
    <string name="input_medical_condition">Medical Condition/s</string>
    <string name="input_medication">Current Medications</string>
    <string name="input_medicine">Medicine (e.g. Vertigon)</string>
    <string name="input_medicines">Medicine</string>
    <string name="input_surgery">e.g. Kidney</string>
    <string name="input_heredetary">E.g. Hypertension</string>
    <string name="input_phone">Phone No. 09xx-xxx-xxxx</string>
    <string name="input_dosage">(mg)</string>
    <string name="input_email">Email</string>
    <string name="input_pass">Password</string>
    <string name="input_confirm_pass">Confirm Password</string>
    <string name="input_new_pass">New Password</string>
    <string name="input_report_details">Report Details</string>
    <string name="input_systolic">Systolic</string>
    <string name="input_diastolic">Diastolic</string>
    <string name="input_status">Status</string>
    <string name="input_dosage_exp">Dosage (e.g. 25mg)</string>
    <string name="input_no">0</string>
    <string name="input_feat">Feature</string>
    <string name="input_date">Date</string>
    <string name="input_select_date">-Select a date-</string>
    <string name="input_otp">4-digit OTP (e.g. 0000)</string>
    <string name="p_confirm_reg">Are you currently Preganant?.</string>
    <string name="p_reg1">Do you have any history of medical conditions that could be hereditary? If yes then please list them down along with their respective dates.</string>
    <string name="p_reg2">Have you had any past surgeries? If you had then please list them down along with their respective dates.</string>
    <string name="p_reg3">Do you have any previous medications e.g. Paracetamol? If you had then please list them down along with their respective dates. </string>
    <string name="p_terms1">By checking the box, you are agreeing with the terms and conditions of the app</string>
    <string name="p_change_pass">Please enter your email to change your password.</string>
    <string name="p_forgot">Forgot Password?</string>
    <string name="p_con_name">E.g. Asthma</string>
    <string name="p_med">E.g. Paracetamol</string>
    <string name="p_med_modal">Please input the medical condition and the date it was diagnosed.</string>
    <string name="p_medicine_modal">Please input the medicine and the date it was diagnosed.</string>
    <string name="p_surg_modal">Please input your surgical history.</string>
    <string name="p_current_condition">Do you currently have a medical condition? if none then please add \"none\"</string>
    <string name="p_prev_med">Have you had any previous medications? if none then please add \"none\"</string>
    <string name="p_bmi">Please enter your height in cm and weight in kg</string>
    <string name="p_trouble">Having trouble?</string>
    <string name="p_reg">Or Register with</string>
    <string name="p_log">Or Login with</string>
    <string name="p_forgot2">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="p_otp">Enter the verification code we just sent on your email address.</string>
    <string name="p_new_pass">Your new password must be unique from those previously used.</string>
    <string name="p_success_change">Your password has been changed successfully.</string>
    <string name="p_account_verified">Your Account has been verified!</string>
    <string name="p_admin_review">Report will be viewed by an admin.</string>
    <string name="p_issue_resolved">Your issue has been resolved.</string>
    <string name="p_bp_modal">Please input the Systolic and Diastolic details below</string>
    <string name="p_delete_acc">Are you sure you want to Delete your account?</string>
    <string name="p_delete">Are you sure you want to delete?</string>
    <string name="p_booking_success">Thank you for booking</string>
    <string name="p_no_appointment">You don\'t have any appointments today.</string>
    <string name="p_resched_modal">Are you sure you want to Reschedule?</string>
    <string name="p_cancel_modal">Are you sure you want to Cancel?</string>
    <string name="p_appointment_date">Appointment Date</string>
    <string name="p_view">View</string>
    <string name="p_date">Date</string>
    <string name="p_payment">Payment Link</string>
    <string name="p_payment_info">Please input your email where the payment link will be sent. Once it is paid then your appointment will be booked.</string>
    <string name="p_no_avail">There are currently no available doctors.</string>
    <string name="p_no_bp">No BP history.</string>
    <string name="p_resched_appoint">Please enter your email to request a reschedule to the doctor.</string>
    <string name="p_resched_appointment">There was an overlapping with the scheduled date, if you want to see the new date please click on the button below, you may also opt to reschedule again.</string>
    <string name="li_reg_now">Don’t have an account?</string>
    <string name="li_rem_pass">Remember your Password?</string>
    <string name="li_receive">Did not receive a code? Resend</string>
    <string name="li_admin">For more inquiries please email [Admin Email]</string>
    <string name="li_read_more">Read More on: Link.com</string>
    <string name="title_activity_forgot_pass">ForgotPassActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="li_terms"><u>Terms and Conditions</u></string>
    <string name="li_bug">Report a Problem</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nav_bp">BP</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_consul">Consultations</string>
    <string name="nav_profile">Profile</string>
    <string name="educ_res">
        High blood pressure, also known as hypertension, is a common medical condition that affects a
        significant number of individuals worldwide. It occurs when the force of blood against the walls
        of the arteries is consistently too high, putting extra strain on the heart and blood vessels.
        While high blood pressure can be influenced by genetic factors, lifestyle choices such as a
        sedentary lifestyle, unhealthy diet, excessive salt intake, smoking, and excessive alcohol
        consumption can contribute to its development.
    </string>
    <string name="Q1">1. What is the purpose of this app?</string>
    <string name="Q2">2. How does the app measure my blood pressure?</string>
    <string name="Q3">3. Can I chat with my doctor outside of my appointment time?</string>
    <string name="Q4">4. What if I have technical issues or need help with the app?</string>
    <string name="Q5">5. Is this app a substitute for professional medical advice?</string>
    <string name="confirm_email">Confirm Email</string>
</resources>