<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_black"
            android:text ="@string/p_surg_modal"
            android:fontFamily="@font/font_urbanist_bold"
            android:textSize="23sp"
            android:layout_marginBottom="25dp"
            />

        <EditText
            android:id="@+id/edit_surg"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/input_surgery"
            android:textColor="@color/grey"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/edit_prev_surg_date"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/input_select_date"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/btn_modal_confirm_surg"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/font_urbanist_medium"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_text_color_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_modal_deny_surg"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_secondary"
            android:fontFamily="@font/font_urbanist_medium"
            android:text="@string/btn_exit"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_text_color"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>