<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFinActivity">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/font_urbanist_bold"
            android:text="@string/header_reg_3"
            android:textColor="@color/primary_black"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="129dp" />

        <EditText
            android:id="@+id/txt_confirm_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/confirm_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="129dp" />

        <EditText
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="129dp" />

        <EditText
            android:id="@+id/txt_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/input_confirm_pass"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="129dp" />


        <CheckBox
            android:id="@+id/chk_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/font_urbanist_medium"
            android:text="@string/p_terms1"
            android:textColor="@color/primary_black" />

        <Button
            android:id="@+id/btn_confirm_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/font_urbanist_medium"
            android:text="@string/btn_register"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_text_color_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.500" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>