<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back_payment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_back"
            android:drawableStart="@drawable/back_arrow"
            android:paddingStart="15dp"
            android:text="@string/filler"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.105" />

        <TextView
            android:id="@+id/p_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/font_urbanist_bold"
            android:text="@string/p_payment"
            android:textColor="@color/primary_black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/p_payment_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/font_urbanist_regular"
            android:text="@string/p_payment_info"
            android:textColor="@color/black_alter"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_email_payment"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="129dp" />

        <Button
            android:id="@+id/btn_send_payment"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/font_urbanist_medium"
            android:text="@string/btn_payment"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_text_color_white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>